# kinesisvideo-encoder-ros1

h264_video_encoder/: CMakeLists.txt
h264_video_encoder/src/: decoder_main.cpp  h264_video_decoder.cpp  h264_video_encoder.cpp
